@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/PodParser
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.53 2012/04/28 01:46:55 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.54 2012/05/02 14:24:29 tove Exp $
+
+*PodParser-1.510.0 (02 May 2012)
+
+  02 May 2012; Torsten Veller <tove@gentoo.org> +PodParser-1.510.0.ebuild:
+  Version bump
 
   28 Apr 2012; Alexis Ballier <aballier@gentoo.org> PodParser-1.380.0.ebuild:
   keyword ~amd64-fbsd
